[project]
name = "chronosx"
version = "0.1.0"
description = "Time utility library for trading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # update if needed
    "pandas_market_calendars==5.3.1",
    "pandas",
    "fastdigest",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "ruff",
    "pre-commit",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cli = "chronosx.cli:main"

[tool.pytest.ini_options]
addopts = "-s -v"
