[project]
name = "chronosx"
dynamic = ["version"]
description = "A Python library for trading calendar management, execution profiling, and temporal backtesting (Time Travel)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # update if needed
    "pandas_market_calendars==5.3.1",
    "pandas",
    "fastdigest",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "ruff",
    "pre-commit",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cli = "chronosx.cli:main"

[tool.pytest.ini_options]
addopts = "-s -v"

[tool.hatch.version]
path = "chronosx/__init__.py"
