[project]
name = "chronosx-quant"
dynamic = ["version"]
description = "A Python library for trading calendar management, execution profiling, and temporal backtesting (Time Travel)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Huang Wei", email = "huangwei@apache.org" },
]
dependencies = [
    # update if needed
    "pandas_market_calendars==5.3.1",
    "pandas",
    "fastdigest",
]

[project.urls]
Homepage = "https://github.com/vagetablechicken/chronosx-quant"
Repository = "https://github.com/vagetablechicken/chronosx-quant"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "ruff",
    "pre-commit",
]
docker = [
    "fastapi",
    "prometheus-client",
    "uvicorn",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
chronosx-preview = "chronosx_quant.preview:main"

[tool.pytest.ini_options]
addopts = "-s -v"

[tool.hatch.version]
path = "chronosx_quant/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["chronosx_quant"]
